tests/errors/named_arg_missing_field.ptt
// Named-arg constructors require every field to be present.
// `y` is omitted — must be a compile error.

Point is {
  x int
  y int
}

spark {
  p is Point(x is 1)
  yell(p.x)
}
